<resources>
    <string name="app_name">Treasury Solutions</string>
    <string name="quick_settings">Quick settings</string>
    <string name="treasury_solutions">Treasury Solutions</string>
    <string name="ar_language">اللغة العربية</string>
    <string name="country">Country</string>
    <string name="egypt">Egypt</string>
    <string name="currency">Currency</string>
    <string name="egypt_pound">Egypt pound</string>
    <string name="central_bank_of_egypt">Central Bank of Egypt</string>
    <string name="bank">Bank</string>
    <string name="get_start">Get Start</string>
    <string name="choose_bank">Choose Bank</string>
    <string name="confirm">Confirm</string>
    <string name="convert">Convert</string>
    <string name="metal">Metal</string>
    <string name="rates">Rates</string>
    <string name="service">Service</string>
    <string name="account">Account</string>
    <string name="updated_at_s">Updated at %s</string>
    <string name="cbe_bank">CBE Bank</string>
    <string name="usd">USD</string>
    <string name="_1_egp">1 EGP</string>
    <string name="notifications">Notifications</string>
    <string name="currency_rate_in_bank">Currency Rate In Bank</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="according_to_central_bank_of_egypt_updated_at_s">According to Central Bank of Egypt, Updated at %s</string>
    <string name="bank_locations">Bank Locations</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="personality">Personality</string>
    <string name="account_info">Account Info</string>
    <string name="favourite">Favourite</string>
    <string name="finances">Finances</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="login">Login</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="best_for_buy">Best for buy</string>
    <string name="best_for_sell">Best for sell</string>
    <string name="according_to_the_bank">According to the bank</string>
    <string name="change">Change</string>
    <string name="best_value">Best value</string>
    <string name="convert_to">Convert to</string>
    <string name="avg_rate">Avg Rate</string>
    <string name="f">%.2f $</string>
    <string name="s_s_with">%s - %s with</string>
    <string name="_1_s_1_egp">1 %S = 1 EGP</string>

</resources>
