<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/creamy"
        android:padding="@dimen/padding_8"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_notifications_none_24"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_personality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personality"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <include
        android:id="@+id/account_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/text_personality"/>

    <include
        android:id="@+id/favourite_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/account_item"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_finances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finances"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourite_item" />

    <include
        android:id="@+id/country_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/text_finances"/>

    <include
        android:id="@+id/currency_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/country_item"/>

    <include
        android:id="@+id/bank_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/currency_item"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_item" />

    <include
        android:id="@+id/language_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/text_settings"/>

    <include
        android:id="@+id/settings_item"
        layout="@layout/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/language_item"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_item" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_account" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
        app:layout_constraintStart_toEndOf="@+id/image_logo"
        app:layout_constraintTop_toTopOf="@id/image_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>