<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_abbreviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="@id/image_logo"
        app:layout_constraintEnd_toEndOf="@+id/image_logo"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_10"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@id/text_abbreviation"
        app:layout_constraintStart_toStartOf="@id/image_logo"
        app:layout_constraintEnd_toEndOf="@+id/image_logo"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"/>

    <TextView
        android:id="@+id/text_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_locations"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="@id/image_location"
        app:layout_constraintBottom_toBottomOf="@+id/image_location"
        app:layout_constraintStart_toEndOf="@id/image_location"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_arrow_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_location"
        app:layout_constraintBottom_toBottomOf="@+id/image_location"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_notifications_none_24"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_location"/>

    <TextView
        android:id="@+id/text_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="@id/image_notification"
        app:layout_constraintBottom_toBottomOf="@+id/image_notification"
        app:layout_constraintStart_toEndOf="@id/image_notification"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggle"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_notification"
        app:layout_constraintBottom_toBottomOf="@+id/image_notification"/>

    <TextView
        android:id="@+id/text_updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_text_gray"
        android:textSize="@dimen/text_size_10"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/image_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_currency_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_rate_in_bank"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="@+id/image_notification"
        app:layout_constraintTop_toBottomOf="@id/text_updated_at" />

    <TextView
        android:id="@+id/text_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toStartOf="@+id/text_sell"
        app:layout_constraintTop_toTopOf="@id/text_currency_rate"
        app:layout_constraintBottom_toBottomOf="@+id/text_currency_rate"/>

    <TextView
        android:id="@+id/text_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="@+id/toggle"
        app:layout_constraintTop_toTopOf="@id/text_currency_rate"
        app:layout_constraintBottom_toBottomOf="@+id/text_currency_rate"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/bank_rates_recycler_view"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="@+id/image_notification"
        app:layout_constraintEnd_toEndOf="@+id/toggle"
        app:layout_constraintTop_toBottomOf="@+id/text_currency_rate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
