<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_size_12"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/notification_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_notifications_none_24"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"/>

    <TextView
        android:id="@+id/text_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="@id/notification_image"
        app:layout_constraintBottom_toBottomOf="@+id/notification_image"
        app:layout_constraintStart_toEndOf="@id/notification_image"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggle"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notification_image"
        app:layout_constraintBottom_toBottomOf="@+id/notification_image"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chart_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:padding="@dimen/padding_8"
        android:background="@color/creamy"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@+id/notification_image">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_avg_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_rate"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_12"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_chips" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_avg_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_12"
            android:layout_marginStart="@dimen/margin_4"
            app:layout_constraintStart_toEndOf="@+id/text_avg_rate"
            app:layout_constraintTop_toTopOf="@+id/text_avg_rate"
            app:layout_constraintBottom_toBottomOf="@+id/text_avg_rate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_avg_rate"
            app:layout_constraintBottom_toBottomOf="@+id/text_avg_rate" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_avg_rate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_text_gray"
        android:textSize="@dimen/text_size_10"
        android:layout_marginTop="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/chart_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_currency_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_rate_in_bank"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="@+id/notification_image"
        app:layout_constraintTop_toBottomOf="@id/text_updated_at" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".72" />

    <TextView
        android:id="@+id/text_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/text_currency_rate"
        app:layout_constraintBottom_toBottomOf="@+id/text_currency_rate"/>

    <TextView
        android:id="@+id/text_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_14"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="@+id/toggle"
        app:layout_constraintTop_toTopOf="@id/text_currency_rate"
        app:layout_constraintBottom_toBottomOf="@+id/text_currency_rate"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/currencies_rates_recycler_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="@+id/notification_image"
        app:layout_constraintEnd_toEndOf="@+id/toggle"
        app:layout_constraintTop_toBottomOf="@+id/text_currency_rate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
